<resources>
    <string name="app_name">HealthManagementApp</string>
    <string name="Patient_Title">Welcome !!!</string>

    <string name="TrackCalories">Track Calories</string>
    <string name="BookAppontment">Book Appointment</string>
    <string name="OnlineHelp">Online Help</string>
    <string name="Account">My Account</string>
    <string name="logout">Logout</string>
    <string name="findADoctor">Find A Doctor</string>
    <string name="my_account">My Account</string>
    <string name="foodtracker">Food Tracker</string>
    <string name="fooditemHint">Enter Food Item</string>
    <string name="foodamounthint">Enter the calories</string>
    <string name="CalculateCalories">Calculate Calories</string>
    <string name="AddItem">Add Food Item</string>
    <string name="postalcodehint">Enter your postal code</string>
    <string name="searchdoctor">Search</string>
    <string name="refresh_button">Refresh</string>
    <string name="text">button</string>
    <string name="back">Back</string>
    <string name="search_all_doctors">Search All Doctors</string>
    <string name="search_by_postal_code">Search by postal code</string>
    <string name="total_calories">Total Calories</string>
    <string name="request">REQUEST</string>
    <string name="confirm_appointment">Confirm Appointment</string>

</resources>